<resources>
    <string name="app_name">CBDisposal</string>
    <string name="login_header">Inicio de sesión</string>
    <string name="username_field">Usuario</string>
    <string name="password_field">Contraseña</string>
    <string name="username_field_mayus">USUARIO</string>
    <string name="password_field_mayus">CONTRASEÑA</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="no_register_text">¿Aún no estás registrado?</string>
    <string name="register_button_redirect">Regístrate</string>
    <string name="email_field_mayus">EMAIL</string>
    <string name="password_confirm_field_mayus">CONFIRMACIÓN CONTRASEÑA</string>
    <string name="send_button">Enviar</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="index_title">Inicio</string>
    <string name="profile_title">Perfil</string>
    <string name="post_button">Publicar</string>
    <string name="post_title_mayus">TÍTULO</string>
    <string name="post_descripcion_mayus">DESCRIPCIÓN</string>
    <string name="post_price_mayus">PRECIO</string>
    <string name="name_field_mayus">NOMBRE</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="upload_photo_button">Seleccionar imagen</string>
</resources>
