<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/username_field_mayus"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/login_logo"
        app:layout_constraintStart_toStartOf="@+id/login_logo"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password_field_mayus"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <EditText
        android:id="@+id/password_confirm_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password_confirm_field_mayus"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="324dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_new_post_button"
        android:drawableStart="@drawable/ic_add_circle_white_24dp"
        android:drawablePadding="-110dp"
        android:onClick="submit"
        android:paddingStart="110dp"
        android:text="@string/send_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/user_upload_photo"
        app:layout_constraintStart_toStartOf="@+id/user_upload_photo"
        app:layout_constraintTop_toBottomOf="@+id/user_upload_photo"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="318dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email_field_mayus"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/name_field"
        app:layout_constraintStart_toStartOf="@+id/name_field"
        app:layout_constraintTop_toBottomOf="@+id/name_field" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/name_field_mayus"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/username_field"
        app:layout_constraintStart_toStartOf="@+id/username_field"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <Button
        android:id="@+id/user_upload_photo"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_new_post_button"
        android:includeFontPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/upload_photo_button"
        android:textColor="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="@+id/password_confirm_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_confirm_field"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_field" />

</androidx.constraintlayout.widget.ConstraintLayout>