<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/username_field_mayus"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/login_logo"
        app:layout_constraintStart_toStartOf="@+id/login_logo"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password_field_mayus"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/username_field"
        app:layout_constraintStart_toStartOf="@+id/username_field"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_account_circle_white_24dp"
        android:drawablePadding="-80dp"
        android:onClick="submit"
        android:paddingStart="80dp"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_add_circle_white_24dp"
        android:drawablePadding="-90dp"
        android:onClick="redirectRegister"
        android:paddingStart="90dp"
        android:text="@string/register_button_redirect"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_register_text"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="318dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/no_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/no_register_text"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>