<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/post_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_primary_24dp" />

    <Button
        android:id="@+id/post_publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_new_post_button"
        android:text="@string/post_button"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="@+id/post_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_exit" />

    <Button
        android:id="@+id/post_upload_photo"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_new_post_button"
        android:includeFontPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/upload_photo_button"
        android:textColor="@color/colorBackground"
        app:layout_constraintStart_toStartOf="@+id/post_price_input"
        app:layout_constraintTop_toBottomOf="@+id/post_price_input" />

    <EditText
        android:id="@+id/post_title_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/post_title_mayus"
        android:inputType="text"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/post_publish_button"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/post_exit"
        app:layout_constraintTop_toBottomOf="@+id/post_publish_button" />

    <EditText
        android:id="@+id/post_description_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/post_descripcion_mayus"
        android:inputType="textLongMessage"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/post_title_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/post_title_input"
        app:layout_constraintTop_toBottomOf="@+id/post_title_input" />

    <EditText
        android:id="@+id/post_price_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/post_price_mayus"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimaryLight"
        android:textColorHighlight="@color/colorPrimaryLight"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="@+id/post_description_input"
        app:layout_constraintStart_toStartOf="@+id/post_description_input"
        app:layout_constraintTop_toBottomOf="@+id/post_description_input" />

</androidx.constraintlayout.widget.ConstraintLayout>